# jade-lens

./: .gitignore  CLAUDE.md  DESIGN.md  KNOWN_ISSUES.md  README.md  pyproject.toml
.claude/skills/jade/: SKILL.md
.github/workflows/: deploy-pages.yml
assets/: README.md
changelogs/: v0.1.0.md
docs/: data-repo-setup.md
docs/web/: json-viewer.md  markdown-rendering-spec.md  markdown-rendering.md
jadelens/: __init__.py  apply.py  cli.py  config.py  handle_bot_response.py  operations.py  reflection.py  skill.py  unified_diff.py  wikilinks.py  workflow.py
jadelens/templates/skill/: v0.1.0.md
scripts/: _strip_hidden_layers.py  handle_bot_response  optimize_logo  process_logo
templates/skill/: v0.1.0.md
tests/: conftest.py  test_cli.py  test_config_from_mapping.py  test_extraction.py  test_json_patch_apply.py  test_marker.py  test_operations_apply.py  test_operations_parse.py  test_reflection.py  test_render.py  test_templates.py  test_unified_diff.py  test_wikilinks.py  test_workflow.py
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
web/public/: manifest.webmanifest
web/src/: App.css  App.jsx  FileBreadcrumb.jsx  FileBrowser.css  FileBrowser.jsx  FileTree.jsx  FileView.jsx  JsonCardViewer.jsx  Main.jsx  MarkdownRenderer.jsx  Settings.css  Settings.jsx  SettingsForm.jsx  TimeFormatContext.js  config.js  db.js  github.js  index.css  main.jsx  markdown.css  pathUtils.js  viewerSettings.js
web/src/nodes/: DateNode.jsx  WikilinkNode.jsx
web/src/plugins/: remarkDates.js  remarkWikilinks.js
