[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jadelens"
dynamic = ["version"]
description = "JADE LENS — personal AI assistant."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Tomás Silveira Salles" },
]
dependencies = []

[project.scripts]
jadelens = "jadelens.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.version]
path = "jadelens/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["jadelens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
